** KPILOT CHANGELOG **
======================


2005-04-11  Adriaan de Groot
* Bumped KPilot version.
* Added a test program for some parts of the library. Woo! A first!
  Finally something resembling actual software engineering in KPilot.
* Cleaned up headers that weren't including all required (system) headers.

2005-04-10  Adriaan de Groot
* Some useful patches from Philip T. to the vcal conduit committed.
* Made the sync mode a full-fledged class and ported lib/ and kpilot/
  to use it. Disabled all the conduits for the time being. Bumped the
  conduit API because of this. This might cause some serious breakage
  for the time being.

2005-04-09  Adriaan de Groot
* Geez, can we switch to Subversion yet?
* Committed the weird-ass record conduit template changes. This makes the
  RecordConduit a fully templated "container". You plug in 5 other classes
  to get a working implementation. This is similar to what the record
  conduit already. The main difference is that it is easier to re-use
  the things you plug into the recordconduit template. I have a KNotes
  partial implementation that wraps KCal::Calendar, so that is immediately
  reuseable for the other 4-button ones.
* Ripped out test mode from KPilotTest and elsewhere, since it wasn't working
  at all. I think the "mode" setting for conduits needs a lot more structure.
  Just having an enum doesn't cut it (what about doing a test-mode local
  PC to HH sync? Such a sync could be used to produce .pdb files from Kontact
  data, which is just what the doctor ordered sometimes).

2005-03-22  Adriaan de Groot
* Long drought in doing any KPilot work or updating the ChangeLog.
* Meddled in lib/ some to add modifiedIDList() and sanitize some types.
* Prepared to make fFirstSync private, though it has getters and setters
  so that doesn't really do much for OO'ness.
* Wrote a template class for doing syncs generically, to replace the
  RecordConduit. This one I understand, at least. It's not done yet though,